Added voices endpoint to docs
